Final Reddit w/comments/karma added

--- a/index.html
+++ b/index.html
@@ -20,11 +20,25 @@
                     Recent Posts
                   </div>
                   <div class="panel-body">
-                      <div ng-repeat="post in posts">
+                      <div ng-repeat="post in posts | filter: post.timestamp">
                         <h1>{{post.title}}</h1>
                         <i>{{post.timestamp | date : format : timezone}}</i>
                         <p>{{post.body}}</p>
                         <i>{{post.author}}</i>
+                        <p>Karma {{post.karma}}</p>
+                        <span ng-click="vote($index, 'up')" class="glyphicon glyphicon-thumbs-up"></span>
+                        <span ng-click="vote($index, 'down')" class="glyphicon glyphicon-thumbs-down"></span>
+                        <hr>
+                        <form ng-submit="submitComment($index, post.commentForm)">
+                          <div class="form-group">
+                            <textarea class="form-control" placeholder="comment" ng-model="post.commentForm"></textarea>
+                          </div>
+                          <div class="form-group">
+                            <button class="btn btn-danger btn-block">Submit</button>
+                        </form>
+                        <div ng-repeat="comment in post.comments">
+                        {{comment}}
+                        </div>
                       </div>
                     </div>
                   <div class="panel-footer">
@@ -58,16 +72,17 @@
                     </div>
                 
                 <div class="panel-footer">
-                    <div class="row">
-                        <div class="col-md-6">
-                  <button class="btn btn-info btn-block" ng-click="addPost()">Post!</button>
-                        </div>
-                    </div>
-                    <div class="row">
+                  <div class="row">
                     <div class="col-md-6">
-                  <button class="btn btn-default btn-block" ng-click="reset()">Cancel</button>
-              </div>
-            </div>
+                      <button class="btn btn-info btn-block" ng-click="addPost()">Post!</button>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <button class="btn btn-default btn-block" ng-click="reset()">Cancel</button>
+                    </div>
+                  </div>
+                </div>
           </div>
         </div>
       </div>
